fix latter spacing of article title

--- a/style.scss
+++ b/style.scss
@@ -125,6 +125,7 @@ header {
       line-height: 49px;
       margin-top: 120px;
       height: 56px;
+      letter-spacing: 0.2px;
     }
 
     .article__introduction--description {
@@ -518,5 +519,10 @@ footer {
         margin-left: -116.75px;
       }
     }
+  }
+
+  .section1 {
+    width: 1024px;
+    margin-bottom: 135px;
   }
 }
